--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ ul {
 	width: 200px;
 	padding: 2px 2px 1px 2px;
 	background-color: #ffb900;
-	border: 3px double #402e00;
+	border: 3px double #000000;
 
 }
 
@@ -25,19 +25,20 @@ ul a:link, ul a:visited {
 	font-weight: bold;
 	background-color: #966c00;
 	color: #def;
-	border-left: 10px solid #402e00;
+	border-left: 10px solid #000000;
 }
 
 ul a:hover {
 	width: 166px;
 	background-color: #ffd669;
 	color: #fff;
-	border-left: 20px solid #402e00;
+	border-left: 20px solid #000000;
 }
 body {
-	background-color: #e0daca;
+	background-image: url("Images/background.jpg");
+	background-color: #ffffff;
 	color: #000000; 
-	font-family: : Verdana, Arial, Helvetica,sans-serif; 
+	font-family: : Lucida Console, Courier New, monospace; 
 	font-size: 16px
 	margin:0;
 	padding:0;
@@ -47,22 +48,22 @@ dt {
 	padding: 7px 15px;
 	font-weight: bold;
 	font-size: 45px;
-	background-color: #ffb900;
-	color: #402e00;
+	color: #000000;
 	text-align: center;
-	border-right: 20px solid #402e00;
 	margin-top: 1px;
 }
 
 form {
-  border: 3px solid #f1f1f1;
+	font-size: 20px;
+	background-color: #ebc034;
+	border: 3px solid #000000;
 }
 input[type=text], input[type=password] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #402e00;
+  border: 1px solid #000000;
   box-sizing: border-box;
 }
 
